<package>
  <name>rtt_soem_maxpos</name>
  <version>1.0.0</version>
  <description>This package contains drivers for maxpos motor drives. These drivers are to be used with the soem master component of Orocos</description>
  <maintainer email="gianni.borghesan@kuleuven.be">Gianni Borghesan</maintainer>

  <license>LGPL</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Gianni Borghesan</author>
  <author>Sergio Portolez</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>soem</build_depend>
  <build_depend>soem_master</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rtt_roscomm</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>soem</run_depend>
  <run_depend>soem_master</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  


</package>

